--- a/css/scss/structure/header.scss
+++ b/css/scss/structure/header.scss
@@ -4,7 +4,7 @@
 .header{
     background-color: $colorBrand;
     padding: 20px 0;
-    @media(max-width: 922px){
+    @media(max-width: 992px){
         position: fixed;
         width: 100%;
         left: 0;
